fix(UI): Fix flicker when dismissing zoomed images

--- a/app/src/ui/components/Figure/Figure.css
+++ b/app/src/ui/components/Figure/Figure.css
@@ -1,6 +1,7 @@
 .figure {
     img {
         @apply rounded-lg;
+        transition: opacity 100ms;
     }
 }
 
@@ -17,7 +18,7 @@
 }
 
 .figure.is-zoomed img {
-    visibility: hidden;
+    opacity: 0;
 }
 
 .zoomed-img {
